# jira-to-bq-cloud-run-template

./: Dockerfile  README.md  main.py  pyproject.toml
